generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-06/build_stderr_4.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::getCountedByCountField(const clang::FieldDecl*, const clang::FieldDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:121:46: error: no matching function for call to ‘clang::FieldDecl::isFlexibleArrayMemberLike() const’
  121 |   if (!FAD || !FAD->isFlexibleArrayMemberLike())
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:496:15: note: candidate: ‘static bool clang::Decl::isFlexibleArrayMemberLike(clang::ASTContext&, const clang::Decl*, clang::QualType, clang::LangOptions::StrictFlexArraysLevelKind, bool)’
  496 |   static bool isFlexibleArrayMemberLike(
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:496:15: note:   candidate expects 5 arguments, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:127:53: error: cannot convert ‘clang::IdentifierInfo*’ to ‘const clang::FieldDecl*’ in initialization
  127 |     if (const FieldDecl *FD = CBA->getCountedByField()) {
      |                               ~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                     |
      |                                                     clang::IdentifierInfo*
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::extractCountedByFAccess(const clang::Expr*, clang::ento::CheckerContext&, const clang::FieldDecl*&, const clang::FieldDecl*&, const clang::ento::MemRegion*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:181:37: error: no matching function for call to ‘clang::FieldDecl::isFlexibleArrayMemberLike() const’
  181 |   if (!FD->isFlexibleArrayMemberLike())
      |        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:496:15: note: candidate: ‘static bool clang::Decl::isFlexibleArrayMemberLike(clang::ASTContext&, const clang::Decl*, clang::QualType, clang::LangOptions::StrictFlexArraysLevelKind, bool)’
  496 |   static bool isFlexibleArrayMemberLike(
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:496:15: note:   candidate expects 5 arguments, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:259:38: error: no matching function for call to ‘clang::FieldDecl::isFlexibleArrayMemberLike() const’
  259 |     if (!F->isFlexibleArrayMemberLike())
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:496:15: note: candidate: ‘static bool clang::Decl::isFlexibleArrayMemberLike(clang::ASTContext&, const clang::Decl*, clang::QualType, clang::LangOptions::StrictFlexArraysLevelKind, bool)’
  496 |   static bool isFlexibleArrayMemberLike(
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:496:15: note:   candidate expects 5 arguments, 0 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
